Deployments/ingress-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-ingress
spec:
  hosts:
  - mygateway.somedomain # not used
  addresses:
  - 192.169.1.11/24 # VIPs
  ports:
  - number: 31973
    name: http
    protocol: HTTP
  location: MESH_INTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.1.11
