Deployments/new-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 5020
      name: http
      protocol: HTTP
    hosts:
    - dds-gateway.k3s.externl
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-dds
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: dds
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dds
spec:
  host: dds-gateway.k3s.externl
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-dds-through-egress-gateway
spec:
  hosts:
  - dds-gateway.k3s.externl
  gateways:
  - mesh
  - istio-egressgateway
  http:
  - match:
    - gateways:
      - mesh
      #destinationSubnets:
      #- 192.168.1.9/32
      port: 5020
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: dds
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    - uri:
        regex: "/videoStreaming/camFeed"
    route:
    - destination:
        host: dds-gateway.k3s.externl
        port:
          number: 5020
      weight: 100
